created more templates and made changes in student .py

--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- Custom CSS -->
-<title>Login</title>
+<title>Register</title>
 </head>
 <body class="bg-nav">
 	<nav class="navbar">
@@ -15,21 +15,15 @@
 	</nav>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8">
-				<h3 class="text-light display-0.5 " style="font-sixe:10px">।विद्या भोगकारी यशः सुखकरी विद्या गुरुणां गुरुः। विद्या राजसु पूज्यते न हि धनं विद्या-विहीनः पशुः।<br> The more the education is spent, the more its grows.</h3>
-			</div>
 			<div class="col-md-4">
 				<div class="card mt-100">
 					<div class="card-body">
-						<form action="/login" method="post">
+						<form action="/register" method="post">
 							<div class="form">
-								<label>Employee</label><br>
-								<input type="text" class="form-control"><br>
-								<label>Password</label><br>
-								<input type="password" class="form-control"><br>
-							<button type="submit" class="btn btn-primary btn-block btn-lg">Login</button>
+								<label>Code</label><br>
+								<input type="number" class="form-control"><br>
 							</div>
-							<p>Not a registered Empolyee?<a href="/register">Register here</a></p>
+							<button type="submit" class="btn btn-primary btn-block btn-lg">Register</button>
 						</form>
 					</div>
 				</div>
