made changes in templates and added functions like add,delete,clear.

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,19 +22,19 @@
 				<div class="card mt-100">
 					<div class="card-body">
 						<form action="/login" method="post">
-							<div class="form">
 								<label>Employee</label><br>
-								<input type="text" class="form-control"><br>
+								<input type="text" class="form-control" id="employee" name="employee"><br>
 								<label>Password</label><br>
-								<input type="password" class="form-control"><br>
+								<input type="password" class="form-control" id="code" name="code"><br>
 							<button type="submit" class="btn btn-primary btn-block btn-lg">Login</button>
-							</div>
 							<p>Not a registered Empolyee?<a href="/register">Register here</a></p>
+													{{error}}
 						</form>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 	<!-- Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNVeG6T" crossorigin="anonymous"></script>
