--- a/templates/student.html
+++ b/templates/student.html
@@ -3,28 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
-        <a href="/home">click</a>
 
-        <form action="/" method="post">
+
+        <form action="/add" method="post">
+            <label for="dname">date:</label><br>
+            <input type="date" id="dname" name="mob_no" placeholder="Enter date here"><br>
             <label for="fname">Branch:</label><br>
-            <input type="text" id="fname" name="branch" placeholder="Enter branch here"><br><br>
+            <input type="text" id="fname" name="branch" placeholder="Enter branch here"><br>
             <label for="lname">Roll_no:</label><br>
-            <input type="number" id="lname" name="roll_no" placeholder="Enter roll_no here"><br><br>
+            <input type="number" id="lname" name="roll_no" placeholder="Enter roll_no here"><br>
             <label for="lname">Name:</label><br>
-            <input type="text" id="mname" name="name" placeholder="Enter name here"><br><br>
+            <input type="text" id="mname" name="name" placeholder="Enter name here"><br>
             <label for="nname">Email:</label><br>
-            <input type="text" id="nname" name="email" placeholder="Enter email here"><br><br>
+            <input type="text" id="nname" name="email" placeholder="Enter email here"><br>
             <label for="aname">Mob_no:</label><br>
-            <input type="number" id="aname" name="mob_no" placeholder="Enter mob_no here"><br><br>
+            <input type="number" id="aname" name="mob_no" placeholder="Enter mob_no here"><br>
             <label for="bname">Sem:</label><br>
             <input type="number" id="bname" name="mob_no" placeholder="Enter sem here"><br><br>
-            <label for="dname">date:</label><br>
-            <input type="date" id="dname" name="mob_no" placeholder="Enter date here"><br><br>
-            <input type="submit" value="Submit">
-
+            <input type="submit" value="Submit" name="Add">
         </form>
         <br />
+
 </body>
-</html>ootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+</html>
