--- a/templates/student.html
+++ b/templates/student.html
@@ -31,7 +31,8 @@
             <form style="text-align:right;">
              <button type="submit" id="loname" value="submit" name="Logout" formmethod="get" formaction="/logout">Logout</button>
             </form>
-        <a href="/attendance">click here to go to attendance page</a>
+        <a href="/add_attendance">click here to go to attendance page</a>
+        <a href="/marks">click here to go to marks page</a>
 
 
 
