modifying code and templates as required

--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -26,9 +26,9 @@
             <col style="width:10%;">
                </colgroup>
            <tr>
+               <th>sl_no</th>
                <th>date</th>
                <th>sem</th>
-               <th>id</th>
                <th>roll</th>
                <th>sub1</th>
                <th>sub2</th>
@@ -39,9 +39,9 @@
            </tr>
             {% for items in data %}
            <tr>
-               <td class="narrow-column"><input type="date" name="date" formaction="/attendance" formmethod="post" size="5"></td>
+                <td>{{items[0]}}</td>
+               <td class="narrow-column"><input type="date" name="date" placeholder=" " size="5"></td>
                <td><input type="text" name="sem"  size="5"></td>
-               <td>{{items[2]}}</td>
                <td><input type="text" name="roll_no" size="5"></td>
                <td><input type="text" name="sub1"  size="5"></td>
                <td><input type="text" name="sub2"  size="5"></td>
@@ -59,5 +59,7 @@
         <button type="submit" value="submit" name="delete" typeof="lg" formaction="/delete_attendance" formmethod="post">Delete</button>
         {{error}}
     </form>
+
+<a href="/add_marks">click here to go to attendance page</a>
 </body>
 </html>
