--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,4 +12,38 @@ background: linear-gradient(to right, #F3F9A7, #CAC531); /* W3C, IE 10+/ Edge, F
     text-align:center;
 }
 
+.container{
+  border-radius: 5px;
+  background-color: blanchedalmond;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 
+}
+input {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid red;
+  border-radius: 10px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+#btn{
+    cursor: pointer;
+    background-color: seagreen;
+}
+table, td, th {
+  border: 1px solid black;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th {
+  height: 50px;
+}
