--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -1,65 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
 
     <meta charset="UTF-8">
-    <title>attendance</title>
+    <title>attendannce</title>
     <style>
-		table {
-			border-collapse: collapse;
-			border: 2px solid black;
-		}
-		th, td {
-			border: 2px solid black;
-			padding: 4px;
-		}
-		body {
+        .container {
+            display: flex;
+        }
+
+        .form-container {
+            flex: 1;
+            margin-right: 10px;
+        }
+
+        .table-container {
+            colspan:"5";
+            flex: 5;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 8px;
+            border: 2px solid black;
+        }
+        body {
     background:linear-gradient(to left, #33ccff 0%, #ffffff 100% );
 }
-     </style>
+    </style>
+
 </head>
 <body>
+        <div class="container">
+            <div class="form-container">
+                <form>
+                    <label for="date">Date:</label><br>
+                    <input type="date" id="date" name=date ><br>
+                    <label for="sem">Sem:</label><br>
+                    <input type="number" id="sem" name=roll_no ><br>
+                    <label for="roll_no">Roll_no:</label><br>
+                    <input type="number" id="roll_no" name="sem" ><br>
+                    <label for="sub1">sub1:</label><br>
+                    <input type="text" id="sub1" name="sub1" ><br>
+                    <label for="sub2">sub2:</label><br>
+                    <input type="text" id="sub2" name="sub2" ><br>
+                    <label for="sub3">sub3:</label><br>
+                    <input type="text" id="sub3" name="sub3" ><br>
+                    <label for="sub4">sub4:</label><br>
+                    <input type="text" id="sub4" name="sub4" ><br>
+                    <label for="sub5">sub5:</label><br>
+                    <input type="text" id="sub5" name=sub5 ><br>
+                    <label for="sub6">sub6:</label><br>
+                    <input type="text" id="sub6" name=sub6 ><br><br>
+                    <input type="button" onclick="addRow()" name="buttton" id="btn" typeof="lg" value="Addrow"><br>
+                     <button type="submit" value="submit" name="submit" typeof="lg" formaction="/add_attendance" formmethod="post">Add</button><br>
+                    {{error}}
+                </form>
+            </div>
+            <div class="table-container">
+                <table id="attendance_table">
 
-    <form action="/add_attendance" method="get">
-       <table style="text-align:center">
-           <colgroup>
-            <col style="width:10%;">
-               </colgroup>
-           <tr>
-               <th>sl_no</th>
-               <th>date</th>
-               <th>sem</th>
-               <th>roll</th>
-               <th>sub1</th>
-               <th>sub2</th>
-               <th>sub3</th>
-               <th>sub4</th>
-               <th>sub5</th>
-               <th>sub6</th>
-           </tr>
-            {% for items in data %}
-           <tr>
-                <td>{{items[0]}}</td>
-               <td class="narrow-column"><input type="date" name="date" placeholder=" " size="5"></td>
-               <td><input type="text" name="sem"  size="5"></td>
-               <td><input type="text" name="roll_no" size="5"></td>
-               <td><input type="text" name="sub1"  size="5"></td>
-               <td><input type="text" name="sub2"  size="5"></td>
-               <td><input type="text" name="sub3"  size="5"></td>
-               <td><input type="text" name="sub4"  size="5"></td>
-               <td><input type="text" name="sub5"  size="5"></td>
-               <td><input type="text" name="sub6"   size="5"></td>
+                <tr>
+                    <th>date</th>
+                    <th >sem</th>
+                    <th >roll_no</th>
+                    <th >sub1</th>
+                    <th >sub2</th>
+                    <th >sub3</th>
+                    <th >sub4</th>
+                    <th>sub5</th>
+                    <th>sub6</th>
+                </tr>
 
-           </tr>
-             {% endfor %}
-       </table><br><br>
-        <button type="submit" value="submit" name="add" typeof="lg" formaction="/add_attendance" formmethod="post">Add</button>
-        <button type="submit" value="submit" name="update" typeof="lg" formaction="/update_attendance" formmethod="post">Update</button>
-        <button type="submit" value="submit" name="clear" typeof="lg" formaction="/clear_attendance" formmethod="post">Clear</button>
-        <button type="submit" value="submit" name="delete" typeof="lg" formaction="/delete_attendance" formmethod="post">Delete</button>
-        {{error}}
-    </form>
+                </table>
+            </div>
+        </div>
 
-<a href="/add_marks">click here to go to attendance page</a>
+    <script>
+        var list1 = [];
+		var list2 = [];
+		var list3 = [];
+		var list4 = [];
+		var list5 = [];
+		var list6 = [];
+		var list7 = [];
+		var list8 = [];
+        var list9 = [];
+
+		var n = 1;
+		var x = 0;
+
+        function addRow() {
+            var AddRown = document.getElementById('attendance_table');
+			var NewRow = AddRown.insertRow(n);
+
+			list1[x] = document.getElementById("date").value;
+			list2[x] =  document.getElementById("sem").value;
+			list3[x] = document.getElementById("roll_no").value;
+			list4[x] = document.getElementById("sub1").value;
+			list5[x] = document.getElementById("sub2").value;
+			list6[x] = document.getElementById("sub3").value;
+			list7[x] = document.getElementById("sub4").value;
+			list8[x] = document.getElementById("sub5").value;
+			list9[x] = document.getElementById("sub6").value;
+
+			var cel1 = NewRow.insertCell(0);
+			var cel2 = NewRow.insertCell(1);
+			var cel3 = NewRow.insertCell(2);
+			var cel4 = NewRow.insertCell(3);
+			var cel5 = NewRow.insertCell(4);
+			var cel6 = NewRow.insertCell(5);
+			var cel7 = NewRow.insertCell(6);
+			var cel8 = NewRow.insertCell(7);
+			var cel9 = NewRow.insertCell(8);
+
+			cel1.innerHTML = list1[x];
+			cel2.innerHTML = list2[x];
+			cel3.innerHTML = list3[x];
+			cel4.innerHTML = list4[x];
+			cel5.innerHTML = list5[x];
+			cel6.innerHTML = list6[x];
+			cel7.innerHTML = list7[x];
+			cel8.innerHTML = list8[x];
+			cel9.innerHTML = list9[x];
+
+			n++;
+			x++;
+
+        }
+    </script>
 </body>
 </html>
+
+
+
+
+
+
+
