--- a/templates/salary.html
+++ b/templates/salary.html
@@ -4,55 +4,158 @@
     <meta charset="UTF-8">
     <title>salary</title>
 
-    <style>
-		table {
-			border-collapse: collapse;
-			border: 2px solid black;
-		}
-		th, td {
-			border: 2px solid black;
-			padding: 4px;
-		}
-		body {
+       <style>
+        .container {
+            display: flex;
+        }
+
+        .form-container {
+            flex: 1;
+            margin-right: 10px;
+        }
+
+        .table-container {
+            colspan:"5";
+            flex: 5;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 8px;
+            border: 2px solid black;
+        }
+        body {
     background:linear-gradient(to left, #33ccff 0%, #ffffff 100% );
-}
-     </style>
+            }
+
+    </style>
 </head>
 <body>
 
-      <form action="/login" method="get">
-            <label for="sname">Sl_no:</label><br>
-            <input type="number" id="sname" name="sl_no" placeholder="Enter count here"><br>
-            <label for="fname">date:</label><br>
-            <input type="date" id="fname" name="date" placeholder="Enter date here"><br>
-            <label for="uname">unique_id:</label><br>
-            <input type="text" id="uname" name="u_id" placeholder="Enter date here"><br>
-            <label for="lname">emp_names:</label><br>
-            <input type="text" id="lname" name="name" placeholder="Enter emp_name here"><br>
-            <label for="lname">Employee_type:</label><br>
-            <input type="text" id="mname" name="employee" placeholder="Enter emp_type here"><br>
-            <label for="nname">dept</label><br>
-            <input type="text" id="nname" name="dept" placeholder="Enter branch here"><br>
-            <label for="aname">semeters:</label><br>
-            <input type="text" id="aname" name="sem" placeholder="Enter sems_managed here"><br>
-            <label for="tname">allowances:</label><br>
-            <input type="number" id="tname" name="allowance" placeholder="Enter allowances here"><br><br>
-            <label for="dname">deductions:</label><br>
-            <input type="number" id="dname" name="deduction" placeholder="Enter deductions here"><br><br>
-            <label for="gname">gross_salary:</label><br>
-            <input type="number" id="gname" name="gross_salary" placeholder="Enter gross_salary here"><br><br>
-            <label for="hname">net_salary:</label><br>
-            <input type="number" id="hname" name="net_salary" placeholder="Enter net_salary here"><br><br>
+      <div class="container">
+            <div class="form-container">
+                  <form>
+                        <label for="sl_no">Sl_no:</label><br>
+                        <input type="number" id="sl_no" name="sl_no" placeholder="Enter count here"><br>
+                        <label for="date">date:</label><br>
+                        <input type="date" id="date" name="date" placeholder="Enter date here"><br>
+                        <label for="uid">unique_id:</label><br>
+                        <input type="text" id="uid" name="u_id" placeholder="Enter date here"><br>
+                        <label for="emp_names">emp_names:</label><br>
+                        <input type="text" id="emp_names" name="name" placeholder="Enter emp_name here"><br>
+                        <label for="emp_type">Employee_type:</label><br>
+                        <input type="text" id="emp_type" name="employee" placeholder="Enter emp_type here"><br>
+                        <label for="dept">Department</label><br>
+                        <input type="text" id="dept" name="dept" placeholder="Enter branch here"><br>
+                        <label for="sem">Semeters_managed:</label><br>
+                        <input type="text" id="sem" name="sem" placeholder="Enter sems_managed here"><br>
+                        <label for="allowances">Allowances:</label><br>
+                        <input type="number" id="allowances" name="allowance" placeholder="Enter allowances here"><br><br>
+                        <label for="deductions">Deductions:</label><br>
+                        <input type="number" id="deductions" name="deduction" placeholder="Enter deductions here"><br><br>
+                        <label for="gross_salary">Gross_Salary:</label><br>
+                        <input type="number" id="gross_salary" name="gross_salary" placeholder="Enter gross_salary here"><br><br>
+                        <label for="net_salary">Net_Salary:</label><br>
+                        <input type="number" id="net_salary" name="net_salary" placeholder="Enter net_salary here"><br><br>
 
-            <button type="submit" value="submit" name="Add" formaction="/add_salary" formmethod="post">add</button>
-            <button type="submit" value="submit" name="Update" formaction="/update_salary" formmethod="post">update</button>
-            <button type="submit" value="submit" name="Clear" formaction="/clear_salary" formmethod="get">Clear</button>
-            <button type="submit" value="submit" name="Delete" formaction="/delete_salary" formmethod="post"> delete</button>
-            </form>
+                         <input type="button" onclick="addRow()" name="buttton" id="btn" typeof="lg" value="Addrow"><br>
+                        <button type="submit" value="submit" name="Add" formaction="/add_salary" formmethod="post">add</button>
+                        <button type="submit" value="submit" name="Update" formaction="/update_salary" formmethod="post">update</button>
+                        <button type="submit" value="submit" name="Clear" formaction="/clear_salary" formmethod="get">Clear</button>
+                        <button type="submit" value="submit" name="Delete" formaction="/delete_salary" formmethod="post"> delete</button>
+                        {{error}}
+                  </form>
+            </div>
+
             <form style="text-align:right;">
              <button type="submit" id="loname" value="submit" name="Logout" formmethod="get" formaction="/logout">Logout</button>
-                {{error}}
             </form>
+
+            <div class="table-container">
+                <table id="salary_table">
+
+                <tr>
+                    <th>sl_no</th>
+                    <th>date</th>
+                    <th>unique_id</th>
+                    <th>Emp_name</th>
+                    <th>Emp_type</th>
+                    <th>Dept</th>
+                    <th>sem</th>
+                    <th>allowance</th>
+                    <th>deduction</th>
+                    <th>gros_salary</th>
+                    <th>net_salary</th>
+                </tr>
+
+                </table>
+            </div>
+      </div>
+
+    <script>
+        var list1 = [];
+		var list2 = [];
+		var list3 = [];
+		var list4 = [];
+		var list5 = [];
+		var list6 = [];
+		var list7 = [];
+		var list8 = [];
+        var list9 = [];
+        var list10 = [];
+        var list11 = [];
+
+		var n = 1;
+		var x = 0;
+
+        function addRow() {
+            var AddRown = document.getElementById('salary_table');
+			var NewRow = AddRown.insertRow(n);
+
+			list1[x] = document.getElementById("sl_no").value;
+			list2[x] =  document.getElementById("date").value;
+			list3[x] = document.getElementById("u_id").value;
+			list4[x] = document.getElementById("name").value;
+			list5[x] = document.getElementById("employee").value;
+			list6[x] = document.getElementById("dept").value;
+			list7[x] = document.getElementById("sem").value;
+			list8[x] = document.getElementById("allowance").value;
+			list9[x] = document.getElementById("deduction").value;
+			list10[x] = document.getElementById("gross_salary").value;
+			list11[x] = document.getElementById("net_salary").value;
+
+			var cel1 = NewRow.insertCell(0);
+			var cel2 = NewRow.insertCell(1);
+			var cel3 = NewRow.insertCell(2);
+			var cel4 = NewRow.insertCell(3);
+			var cel5 = NewRow.insertCell(4);
+			var cel6 = NewRow.insertCell(5);
+			var cel7 = NewRow.insertCell(6);
+			var cel8 = NewRow.insertCell(7);
+			var cel9 = NewRow.insertCell(8);
+			var cel10 = NewRow.insertCell(9);
+			var cel11 = NewRow.insertCell(10);
+
+			cel1.innerHTML = list1[x];
+			cel2.innerHTML = list2[x];
+			cel3.innerHTML = list3[x];
+			cel4.innerHTML = list4[x];
+			cel5.innerHTML = list5[x];
+			cel6.innerHTML = list6[x];
+			cel7.innerHTML = list7[x];
+			cel8.innerHTML = list8[x];
+			cel9.innerHTML = list9[x];
+			cel10.innerHTML = list10[x];
+			cel11.innerHTML = list11[x];
+
+			n++;
+			x++;
+
+        }
+    </script>
 
 </body>
 </html>
