--- a/templates/student.html
+++ b/templates/student.html
@@ -3,39 +3,137 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .container {
+            display: flex;
+        }
+
+        .form-container {
+            flex: 1;
+            margin-right: 10px;
+        }
+
+        .table-container {
+            colspan:"5";
+            flex:3;
+            margin-right:100px
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 8px;
+            border: 2px solid black;
+        }
+        body {
+    background:linear-gradient(to left, #33ccff 0%, #ffffff 100% );
+}
+    </style>
+
 
 </head>
 <body>
+        <div class="container">
+            <div class="form-container">
+
+                <form>
+                    <label for="sl_no">Sl_no:</label><br>
+                    <input type="text" id="sl_no" name="sl_no" placeholder="Enter count here"><br>
+                    <label for="branch">Branch:</label><br>
+                    <input type="text" id="branch" name="branch" placeholder="Enter branch here"><br>
+                    <label for="roll_no">Roll_no:</label><br>
+                    <input type="number" id="roll_no" name="roll_no" placeholder="Enter roll_no here"><br>
+                    <label for="name">Name:</label><br>
+                    <input type="text" id="name" name="name" placeholder="Enter name here"><br>
+                    <label for="email">Email:</label><br>
+                    <input type="text" id="email" name="email" placeholder="Enter email here"><br>
+                    <label for="mob_no">Mob_no:</label><br>
+                    <input type="number" id="mob_no" name="mob_no" placeholder="Enter mob_no here"><br>
+                    <label for="sem">Sem:</label><br>
+                    <input type="number" id="sem" name="sem" placeholder="Enter sem here"><br><br>
+
+                     <input type="button" onclick="addRow()" name="buttton" id="btn" typeof="lg" value="Addrow"><br>
+                    <button type="submit" value="submit" name="Add" formaction="/add_students" formmethod="post">add</button>
+                    <button type="submit" value="submit" name="Update" formaction="/update" formmethod="post">update</button>
+                    <button type="submit" value="submit" name="Clear" formaction="/clear" formmethod="get">Clear</button>
+                    <button type="submit" value="submit" name="Delete" formaction="/delete" formmethod="post"> delete</button><br>
+                    {{error}}
+                </form>
 
 
-        <form action="/login" method="get">
-            <label for="sname">Sl_no:</label><br>
-            <input type="text" id="sname" name="sl_no" placeholder="Enter count here"><br>
-            <label for="fname">Branch:</label><br>
-            <input type="text" id="fname" name="branch" placeholder="Enter branch here"><br>
-            <label for="lname">Roll_no:</label><br>
-            <input type="number" id="lname" name="roll_no" placeholder="Enter roll_no here"><br>
-            <label for="lname">Name:</label><br>
-            <input type="text" id="mname" name="name" placeholder="Enter name here"><br>
-            <label for="nname">Email:</label><br>
-            <input type="text" id="nname" name="email" placeholder="Enter email here"><br>
-            <label for="aname">Mob_no:</label><br>
-            <input type="number" id="aname" name="mob_no" placeholder="Enter mob_no here"><br>
-            <label for="bname">Sem:</label><br>
-            <input type="number" id="bname" name="sem" placeholder="Enter sem here"><br><br>
-            <button type="submit" value="submit" name="Add" formaction="/add" formmethod="post">add</button>
-            <button type="submit" value="submit" name="Update" formaction="/update" formmethod="post">update</button>
-            <button type="submit" value="submit" name="Clear" formaction="/clear" formmethod="get">Clear</button>
-            <button type="submit" value="submit" name="Delete" formaction="/delete" formmethod="post"> delete</button>
-            </form>
-            <form style="text-align:right;">
-             <button type="submit" id="loname" value="submit" name="Logout" formmethod="get" formaction="/logout">Logout</button>
-            </form>
-        <a href="/add_attendance">click here to go to attendance page</a>
-        <a href="/marks">click here to go to marks page</a>
+                <form style="text-align:left;">
+                 <button type="submit" id="loname" value="submit" name="Logout" formmethod="get" formaction="/logout">Logout</button><br>
+                </form><br>
+
+                <a href="/add_attendance">click here to go to attendance page</a><br>
+                <a href="/add_marks">click here to go to marks page</a>
+            </div>
+            <br>
 
 
+            <div class="table-container">
+                    <table id="students_table">
 
+                    <tr>
+                        <th >sl_no</th>
+                        <th >Branch</th>
+                        <th >Roll_no</th>
+                        <th >Name</th>
+                        <th >Email</th>
+                        <th >Mob_no</th>
+                        <th>Sem</th>
+                    </tr>
 
+                    </table>
+            </div>
+        </div>
+
+            <script>
+            var list1 = [];
+            var list2 = [];
+            var list3 = [];
+            var list4 = [];
+            var list5 = [];
+            var list6 = [];
+            var list7 = [];
+
+            var n = 1;
+            var x = 0;
+
+            function addRow() {
+                var AddRown = document.getElementById('students_table');
+                var NewRow = AddRown.insertRow(n);
+
+                list1[x] = document.getElementById("sl_no").value;
+                list2[x] = document.getElementById("branch").value;
+                list3[x] = document.getElementById("roll_no").value;
+                list4[x] = document.getElementById("name").value;
+                list5[x] = document.getElementById("email").value;
+                list6[x] = document.getElementById("mob_no").value;
+                list7[x] = document.getElementById("sem").value;
+
+                var cel1 = NewRow.insertCell(0);
+                var cel2 = NewRow.insertCell(1);
+                var cel3 = NewRow.insertCell(2);
+                var cel4 = NewRow.insertCell(3);
+                var cel5 = NewRow.insertCell(4);
+                var cel6 = NewRow.insertCell(5);
+                var cel7 = NewRow.insertCell(6);
+
+                cel1.innerHTML = list1[x];
+                cel2.innerHTML = list2[x];
+                cel3.innerHTML = list3[x];
+                cel4.innerHTML = list4[x];
+                cel5.innerHTML = list5[x];
+                cel6.innerHTML = list6[x];
+                cel7.innerHTML = list7[x];
+
+                n++;
+                x++;
+            }
+
+            </script>
 </body>
 </html>
