--- a/templates/student.html
+++ b/templates/student.html
@@ -11,12 +11,13 @@
         .form-container {
             flex: 1;
             margin-right: 10px;
+            font-size:20px;
         }
 
         .table-container {
-            colspan:"5";
+            colspan:"3";
             flex:3;
-            margin-right:100px
+            margin-right:150px;
         }
         table {
             width: 100%;
@@ -30,15 +31,18 @@
         body {
     background:linear-gradient(to left, #33ccff 0%, #ffffff 100% );
 }
+    h3{text-align:center}
+
     </style>
 
 
 </head>
 <body>
+        <h3>College Management System</h3>
         <div class="container">
             <div class="form-container">
 
-                <form>
+                <form  id="myform">
                     <label for="sl_no">Sl_no:</label><br>
                     <input type="text" id="sl_no" name="sl_no" placeholder="Enter count here"><br>
                     <label for="branch">Branch:</label><br>
@@ -54,55 +58,45 @@
                     <label for="sem">Sem:</label><br>
                     <input type="number" id="sem" name="sem" placeholder="Enter sem here"><br><br>
 
-                     <input type="button" onclick="addRow()" name="buttton" id="btn" typeof="lg" value="Addrow"><br>
-                    <button type="submit" value="submit" name="Add" formaction="/add_students" formmethod="post">add</button>
-                    <button type="submit" value="submit" name="Update" formaction="/update" formmethod="post">update</button>
-                    <button type="submit" value="submit" name="Clear" formaction="/clear" formmethod="get">Clear</button>
-                    <button type="submit" value="submit" name="Delete" formaction="/delete" formmethod="post"> delete</button><br>
-                    {{error}}
-                </form>
-
-
-                <form style="text-align:left;">
-                 <button type="submit" id="loname" value="submit" name="Logout" formmethod="get" formaction="/logout">Logout</button><br>
+                    <button type="submit" value="submit" name="Add" formaction="/add_students" formmethod="post">ADD</button>
+                    <button type="submit" value="submit" name="Update" formaction="/update" formmethod="post">UPDATE</button>
+                    <button type="submit" value="submit" name="Clear" formaction="/clear" formmethod="get">CLEAR</button>
+                    <button type="submit" value="submit" name="Delete" formaction="/delete" formmethod="post"> DELETE</button><br>
+                                                        {{error}}
+                    <input type="button" onclick="AddRow()" name="button" id="btn"  value="ADDROW"><br>
                 </form><br>
 
-                <a href="/add_attendance">click here to go to attendance page</a><br>
-                <a href="/add_marks">click here to go to marks page</a>
             </div>
-            <br>
-
 
             <div class="table-container">
-                    <table id="students_table">
+                <table id="students_table" >
 
                     <tr>
-                        <th >sl_no</th>
-                        <th >Branch</th>
-                        <th >Roll_no</th>
-                        <th >Name</th>
-                        <th >Email</th>
-                        <th >Mob_no</th>
+                        <th>sl_no</th>
+                        <th>Branch</th>
+                        <th>Roll_no</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Mob_no</th>
                         <th>Sem</th>
                     </tr>
 
-                    </table>
+                </table>
             </div>
         </div>
 
-            <script>
-            var list1 = [];
-            var list2 = [];
-            var list3 = [];
-            var list4 = [];
-            var list5 = [];
-            var list6 = [];
-            var list7 = [];
+        <script>
+                var list1 = [];
+                var list2 = [];
+                var list3 = [];
+                var list4 = [];
+                var list5 = [];
+                var list6 = [];
+                var list7 = [];
 
-            var n = 1;
-            var x = 0;
-
-            function addRow() {
+                var n = 1;
+                var x = 0;
+            function AddRow(){
                 var AddRown = document.getElementById('students_table');
                 var NewRow = AddRown.insertRow(n);
 
@@ -133,7 +127,15 @@
                 n++;
                 x++;
             }
+        </script>
 
-            </script>
+
+        <a href="/add_attendance">click here to go to attendance page</a><br>
+        <a href="/add_marks">click here to go to marks page</a><br>
+        <a href="/display_records">click here to view all records and print</a>
+
+        <form style="text-align:left;">
+            <button type="submit" id="logout" value="submit" name="Logout" formmethod="get" formaction="/logout">Logout</button>
+        </form>
 </body>
 </html>
