continuing with modifying codes and templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,16 +7,17 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- Custom CSS -->
-<title>Login</title>
+
+<title>home</title>
 </head>
 <body class="bg-nav">
 	<nav class="navbar">
-		<a href="" class="navbar-brand text-dark mt-50" >College Management System</a>
+		<a href="" class="navbar-brand text-red mt-50 " >College Management System</a>
 	</nav>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8">
-				<h3 class="text-light display-0.5 " style="font-sixe:10px">।विद्या भोगकारी यशः सुखकरी विद्या गुरुणां गुरुः। विद्या राजसु पूज्यते न हि धनं विद्या-विहीनः पशुः।<br> The more the education is spent, the more its grows.</h3>
+				<h3 class="text-light display-0.5 " style="font-sixe:10px;"  >।विद्या भोगकारी यशः सुखकरी विद्या गुरुणां गुरुः। विद्या राजसु पूज्यते न हि धनं विद्या-विहीनः पशुः।<br> The more the education is spent, the more its grows.</h3>
 			</div>
 			<div class="col-md-4">
 				<div class="card mt-100">
