--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -4,6 +4,7 @@
 
     <meta charset="UTF-8">
     <title>attendannce</title>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style>
         .container {
             display: flex;
@@ -41,7 +42,7 @@
          <h3>College Management System</h3>
         <div class="container">
             <div class="form-container">
-                <form>
+                <form id="myform">
                     <label for="date">Date:</label><br>
                     <input type="date" id="date" name=date ><br>
                     <label for="sem">Sem:</label><br>
@@ -60,17 +61,13 @@
                     <input type="text" id="sub5" name=sub5 ><br>
                     <label for="sub6">sub6:</label><br>
                     <input type="text" id="sub6" name=sub6 ><br><br>
-                     <button type="submit" value="submit" name="submit" typeof="lg" formaction="/add_attendance" formmethod="post">ADD</button>
+                    <button type="submit" value="submit" form="myform" formaction="/add_attendance" formmethod="post">ADD</button>
                     <button type="submit" value="submit" name="submit" typeof="lg" formaction="/add_attendance" formmethod="post">UPDATE</button>
                     <button type="submit" value="submit" name="submit" typeof="lg" formaction="/add_attendance" formmethod="post">CLEAR</button>
-                    <input type="button" onclick="addRow()" name="buttton" id="btn" typeof="lg" value="ADDROW">
+                    <button type="button" onclick="addRow()">ADDROW</button>
                     {{error}}
                 </form>
-                <br />
-                <form style="text-align:left;">
-                    <button type="submit" id="logout" value="submit" name="Logout" formmethod="get" formaction="/logout">Logout</button>
-                </form>
-                <a href="/display_attendance">click here to view all attendance records and print</a>
+
             </div>
             <div class="table-container">
                 <table id="attendance_table">
@@ -86,64 +83,87 @@
                     <th>sub5</th>
                     <th>sub6</th>
                 </tr>
+                    <tbody>
+
+                    </tbody>
 
                 </table>
             </div>
         </div>
 
     <script>
-        var list1 = [];
-		var list2 = [];
-		var list3 = [];
-		var list4 = [];
-		var list5 = [];
-		var list6 = [];
-		var list7 = [];
-		var list8 = [];
-        var list9 = [];
-
-		var n = 1;
-		var x = 0;
+        var rowCount = 1;
 
         function addRow() {
-            var AddRown = document.getElementById('attendance_table');
-			var NewRow = AddRown.insertRow(n);
+            var date = document.getElementById("date").value;
+            var sem = document.getElementById("sem").value;
+            var roll_no = document.getElementById("roll_no").value;
+            var sub1 = document.getElementById("sub1").value;
+            var sub2 = document.getElementById("sub2").value;
+            var sub3 = document.getElementById("sub3").value;
+            var sub4 = document.getElementById("sub4").value;
+            var sub5 = document.getElementById("sub5").value;
+            var sub6 = document.getElementById("sub6").value;
 
-			list1[x] = document.getElementById("date").value;
-			list2[x] =  document.getElementById("sem").value;
-			list3[x] = document.getElementById("roll_no").value;
-			list4[x] = document.getElementById("sub1").value;
-			list5[x] = document.getElementById("sub2").value;
-			list6[x] = document.getElementById("sub3").value;
-			list7[x] = document.getElementById("sub4").value;
-			list8[x] = document.getElementById("sub5").value;
-			list9[x] = document.getElementById("sub6").value;
+            var table = document.getElementById("attendance_table").getElementsByTagName("tbody")[0];
+            var newRow = table.insertRow(rowCount);
+            var cell1 = newRow.insertCell(0);
+            var cell2 = newRow.insertCell(1);
+            var cell3 = newRow.insertCell(2);
+            var cell4 = newRow.insertCell(3);
+            var cell5 = newRow.insertCell(4);
+            var cell6 = newRow.insertCell(5);
+            var cell7 = newRow.insertCell(6);
+            var cell8 = newRow.insertCell(7);
+            var cell9 = newRow.insertCell(8);
+            cell1.innerHTML = date;
+            cell3.innerHTML = sem;
+            cell2.innerHTML = roll_no;
+            cell4.innerHTML = sub1;
+            cell5.innerHTML = sub2;
+            cell6.innerHTML = sub3;
+            cell7.innerHTML = sub4;
+            cell8.innerHTML = sub5;
+            cell9.innerHTML = sub6;
 
-			var cel1 = NewRow.insertCell(0);
-			var cel2 = NewRow.insertCell(1);
-			var cel3 = NewRow.insertCell(2);
-			var cel4 = NewRow.insertCell(3);
-			var cel5 = NewRow.insertCell(4);
-			var cel6 = NewRow.insertCell(5);
-			var cel7 = NewRow.insertCell(6);
-			var cel8 = NewRow.insertCell(7);
-			var cel9 = NewRow.insertCell(8);
+            rowCount++;
 
-			cel1.innerHTML = list1[x];
-			cel2.innerHTML = list2[x];
-			cel3.innerHTML = list3[x];
-			cel4.innerHTML = list4[x];
-			cel5.innerHTML = list5[x];
-			cel6.innerHTML = list6[x];
-			cel7.innerHTML = list7[x];
-			cel8.innerHTML = list8[x];
-			cel9.innerHTML = list9[x];
-
-			n++;
-			x++;
+            // Clear input fields after adding row
+           document.getElementById("date").value = "";
+           document.getElementById("sem").value="";
+           document.getElementById("roll_no").value = "";
+           document.getElementById("sub1").value="";
+           document.getElementById("sub2").value="";
+           document.getElementById("sub3").value="";
+           document.getElementById("sub4").value="";
+           document.getElementById("sub5").value="";
+           document.getElementById("sub6").value="";
 
         }
+        $("#myform").submit(function(event) {
+            event.preventDefault(); // Prevent form submission
+
+            // Serialize form data
+            var formData = $(this).serialize();
+
+       $.ajax({
+                url: "http://127.0.0.1:5000/add_attendance", // Replace with your server-side processing script URL
+                type: "POST",
+                data: formData,
+                success: function(response) {
+                    // Handle the server response, if needed
+                },
+                error: function() {
+                    // Handle the error, if any
+                }
+            });
+        });
     </script>
+
+        <form style="text-align:left;">
+            <button type="submit" id="logout" value="submit" name="Logout" formmethod="get" formaction="/logout">Logout</button>
+        </form>
+         <a href="/display_attendance">click here to view all attendance records and print</a>
 </body>
 </html>
 
