--- a/templates/salary.html
+++ b/templates/salary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>salary</title>
-
+                    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
        <style>
         .container {
             display: flex;
@@ -11,15 +11,15 @@
 
         .form-container {
             flex: 1;
-            margin-right: 10px;
+            margin-right: 20px;
+            font-size:20px;
         }
 
         .table-container {
-            colspan:"5";
-            flex:3;
+            flex:1;
+            margin-right:130px;
         }
         table {
-            width: 100%;
             border-collapse: collapse;
         }
 
@@ -30,28 +30,29 @@
         body {
     background:linear-gradient(to left, #33ccff 0%, #ffffff 100% );
             }
+    h3 { text-align:center;}
 
     </style>
 </head>
 <body>
-
+      <h3>College Management System</h3>
       <div class="container">
             <div class="form-container">
-                  <form method="get">
+                  <form id="myform">
                         <label for="sl_no">Sl_no:</label><br>
-                        <input type="number" id="sl_no" name="sl_no" placeholder="Enter count here"><br>
-                        <label for="date">date:</label><br>
-                        <input type="date" id="date" name="date" placeholder="Enter date here"><br>
-                        <label for="uid">unique_id:</label><br>
-                        <input type="text" id="uid" name="u_id" placeholder="Enter date here"><br>
-                        <label for="emp_names">emp_names:</label><br>
-                        <input type="text" id="emp_names" name="name" placeholder="Enter emp_name here"><br>
+                        <input type="number" id="sl_no" name="sl_no" placeholder="Enter count here"><br><br>
+                        <label for="date">Date:</label><br>
+                        <input type="date" id="date" name="date" placeholder="Enter date here"><br><br>
+                        <label for="uid">Unique_id:</label><br>
+                        <input type="text" id="uid" name="u_id" placeholder="Enter unique_id here"><br><br>
+                        <label for="emp_names">Employee_Names:</label><br>
+                        <input type="text" id="emp_names" name="name" placeholder="Enter emp_name here"><br><br>
                         <label for="emp_type">Employee_type:</label><br>
-                        <input type="text" id="emp_type" name="employee" placeholder="Enter emp_type here"><br>
+                        <input type="text" id="emp_type" name="employee" placeholder="Enter emp_type here"><br><br>
                         <label for="dept">Department</label><br>
-                        <input type="text" id="dept" name="dept" placeholder="Enter branch here"><br>
+                        <input type="text" id="dept" name="dept" placeholder="Enter branch here"><br><br>
                         <label for="sem">Semeters_managed:</label><br>
-                        <input type="text" id="sem" name="sem" placeholder="Enter sems_managed here"><br>
+                        <input type="text" id="sem" name="sem" placeholder="Enter sems_managed here"><br><br>
                         <label for="allowances">Allowances:</label><br>
                         <input type="number" id="allowances" name="allowance" placeholder="Enter allowances here"><br><br>
                         <label for="deductions">Deductions:</label><br>
@@ -60,14 +61,17 @@
                         <input type="number" id="gross_salary" name="gross_salary" placeholder="Enter gross_salary here"><br><br>
                         <label for="net_salary">Net_Salary:</label><br>
                         <input type="number" id="net_salary" name="net_salary" placeholder="Enter net_salary here"><br><br>
+                        <label for="status">Status:</label><br>
+                        <input type="text" id="status" name="status" placeholder="Enter status here"><br><br>
 
-                         <input type="button" onclick="addRow()" name="buttton" id="btn" typeof="lg" value="Addrow"><br>
-                        <button type="submit" value="submit" name="Add" formaction="/add_salary" formmethod="post">add</button>
-                        <button type="submit" value="submit" name="Update" formaction="/update_salary" formmethod="post">update</button>
-                        <button type="submit" value="submit" name="Clear" formaction="/clear_salary" formmethod="get">Clear</button>
-                        {{error}}
+                        <button type="submit" value="submit" form="myform" formaction="/add_salary" formmethod="post">ADD</button>
+                        <button type="button" onclick="addRow()">ADDROW</button>
+
+                        <button type="submit" value="submit" name="Update" formaction="/update_salary" formmethod="post">UPDATE</button>
+                        <button type="submit" value="submit" name="Clear" formaction="/clear_salary" formmethod="get">CLEAR</button>
+                                                                            {{error}}
+
                   </form><br>
-                    <br />
 
                   <form style="text-align:left;">
                     <button type="submit" id="logout" value="submit" name="Logout" formmethod="get" formaction="/logout">Logout</button>
@@ -79,9 +83,9 @@
                 <table id="salary_table">
 
                 <tr>
-                    <th>sl_no</th>
-                    <th>date</th>
-                    <th>unique_id</th>
+                    <th>Sl_no</th>
+                    <th>Date</th>
+                    <th>Unique_id</th>
                     <th>Emp_name</th>
                     <th>Emp_type</th>
                     <th>Dept</th>
@@ -90,72 +94,97 @@
                     <th>Deduction</th>
                     <th>Gross_salary</th>
                     <th>Net_salary</th>
+                    <th>Status</th>
                 </tr>
+                <tbody>
 
+                </tbody>
                 </table>
             </div>
       </div>
 
     <script>
-        var list1 = [];
-		var list2 = [];
-		var list3 = [];
-		var list4 = [];
-		var list5 = [];
-		var list6 = [];
-		var list7 = [];
-		var list8 = [];
-        var list9 = [];
-        var list10 = [];
-        var list11 = [];
-
-		var n = 1;
-		var x = 0;
+        var rowCount = 1;
 
         function addRow() {
-            var AddRown = document.getElementById('salary_table');
-			var NewRow = AddRown.insertRow(n);
+            var sl_no = document.getElementById("sl_no").value;
+            var date = document.getElementById("date").value;
+            var uid = document.getElementById("uid").value;
+            var emp_names = document.getElementById("emp_names").value;
+            var emp_type = document.getElementById("emp_type").value;
+            var dept = document.getElementById("dept").value;
+            var sem = document.getElementById("sem").value;
+            var allowances = document.getElementById("allowances").value;
+            var deductions = document.getElementById("deductions").value;
+            var gross_salary = document.getElementById("gross_salary").value;
+            var net_salary = document.getElementById("net_salary").value;
+            var status = document.getElementById("status").value;
 
-			list1[x] = document.getElementById("sl_no").value;
-			list2[x] =  document.getElementById("date").value;
-			list3[x] = document.getElementById("u_id").value;
-			list4[x] = document.getElementById("name").value;
-			list5[x] = document.getElementById("employee").value;
-			list6[x] = document.getElementById("dept").value;
-			list7[x] = document.getElementById("sem").value;
-			list8[x] = document.getElementById("allowance").value;
-			list9[x] = document.getElementById("deduction").value;
-			list10[x] = document.getElementById("gross_salary").value;
-			list11[x] = document.getElementById("net_salary").value;
+            var table = document.getElementById("salary_table").getElementsByTagName("tbody")[0];
+            var newRow = table.insertRow(rowCount);
+            var cell1 = newRow.insertCell(0);
+            var cell2 = newRow.insertCell(1);
+            var cell3 = newRow.insertCell(2);
+            var cell4 = newRow.insertCell(3);
+            var cell5 = newRow.insertCell(4);
+            var cell6 = newRow.insertCell(5);
+            var cell7 = newRow.insertCell(6);
+            var cell8 = newRow.insertCell(7);
+            var cell9 = newRow.insertCell(8);
+            var cell10 = newRow.insertCell(9);
+            var cell11 = newRow.insertCell(10);
+            var cell12 = newRow.insertCell(11);
 
-			var cel1 = NewRow.insertCell(0);
-			var cel2 = NewRow.insertCell(1);
-			var cel3 = NewRow.insertCell(2);
-			var cel4 = NewRow.insertCell(3);
-			var cel5 = NewRow.insertCell(4);
-			var cel6 = NewRow.insertCell(5);
-			var cel7 = NewRow.insertCell(6);
-			var cel8 = NewRow.insertCell(7);
-			var cel9 = NewRow.insertCell(8);
-			var cel10 = NewRow.insertCell(9);
-			var cel11 = NewRow.insertCell(10);
+            cell1.innerHTML = sl_no;
+            cell2.innerHTML = date;
+            cell3.innerHTML = uid;
+            cell4.innerHTML = emp_names;
+            cell5.innerHTML = emp_type;
+            cell6.innerHTML = dept;
+            cell7.innerHTML = sem;
+            cell8.innerHTML = allowances;
+            cell9.innerHTML = deductions;
+            cell10.innerHTML = gross_salary;
+            cell11.innerHTML = net_salary;
+            cell12.innerHTML = status;
 
-			cel1.innerHTML = list1[x];
-			cel2.innerHTML = list2[x];
-			cel3.innerHTML = list3[x];
-			cel4.innerHTML = list4[x];
-			cel5.innerHTML = list5[x];
-			cel6.innerHTML = list6[x];
-			cel7.innerHTML = list7[x];
-			cel8.innerHTML = list8[x];
-			cel9.innerHTML = list9[x];
-			cel10.innerHTML = list10[x];
-			cel11.innerHTML = list11[x];
+            rowCount++;
 
-			n++;
-			x++;
+            // Clear input fields after adding row
+            document.getElementById("sl_no").value = "";
+            document.getElementById("date").value = "";
+            document.getElementById("uid").value="";
+            document.getElementById("emp_names").value="";
+            document.getElementById("emp_type").value="";
+            document.getElementById("dept").value="";
+            document.getElementById("sem").value="";
+            document.getElementById("allowances").value="";
+            document.getElementById("deductions").value="";
+            document.getElementById("gross_salary").value="";
+            document.getElementById("net_salary").value="";
+            document.getElementById("status").value="";
 
         }
+        $("#myform").submit(function(event) {
+            event.preventDefault(); // Prevent form submission
+
+            // Serialize form data
+            var formData = $(this).serialize();
+
+       $.ajax({
+                url: "http://127.0.0.1:5000/add_salary", // Replace with your server-side processing script URL
+                type: "POST",
+                data: formData,
+                success: function(response) {
+                    // Handle the server response, if needed
+                },
+                error: function() {
+                    // Handle the error, if any
+                }
+            });
+        });
+
+
     </script>
 
 </body>
