--- a/templates/student.html
+++ b/templates/student.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>login</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <style>
         .container {
             display: flex;
@@ -58,12 +60,12 @@
                     <label for="sem">Sem:</label><br>
                     <input type="number" id="sem" name="sem" placeholder="Enter sem here"><br><br>
 
-                    <button type="submit" value="submit" name="Add" formaction="/add_students" formmethod="post">ADD</button>
+                     <button type="submit" value="submit"  name="Add" formaction="/add_students" formmethod="post">ADD</button>
                     <button type="submit" value="submit" name="Update" formaction="/update" formmethod="post">UPDATE</button>
                     <button type="submit" value="submit" name="Clear" formaction="/clear" formmethod="get">CLEAR</button>
-                    <button type="submit" value="submit" name="Delete" formaction="/delete" formmethod="post"> DELETE</button><br>
+                    <button type="submit" value="submit" name="Delete" formaction="/delete" formmethod="post">DELETE</button><br>
                                                         {{error}}
-                    <input type="button" onclick="AddRow()" name="button" id="btn"  value="ADDROW"><br>
+                    <button type="button" onclick="addRow()" value="ADDROW">ADDROW</button><br>
                 </form><br>
 
             </div>
@@ -80,58 +82,77 @@
                         <th>Mob_no</th>
                         <th>Sem</th>
                     </tr>
+                <tbody>
 
+                </tbody>
                 </table>
             </div>
         </div>
 
         <script>
-                var list1 = [];
-                var list2 = [];
-                var list3 = [];
-                var list4 = [];
-                var list5 = [];
-                var list6 = [];
-                var list7 = [];
+        var rowCount = 1;
 
-                var n = 1;
-                var x = 0;
-            function AddRow(){
-                var AddRown = document.getElementById('students_table');
-                var NewRow = AddRown.insertRow(n);
+        function addRow() {
+            var sl_no = document.getElementById("sl_no").value;
+            var branch = document.getElementById("branch").value;
+            var roll_no = document.getElementById("roll_no").value;
+            var name = document.getElementById("name").value;
+            var email = document.getElementById("email").value;
+            var mob_no = document.getElementById("mob_no").value;
+            var sem = document.getElementById("sem").value;
 
-                list1[x] = document.getElementById("sl_no").value;
-                list2[x] = document.getElementById("branch").value;
-                list3[x] = document.getElementById("roll_no").value;
-                list4[x] = document.getElementById("name").value;
-                list5[x] = document.getElementById("email").value;
-                list6[x] = document.getElementById("mob_no").value;
-                list7[x] = document.getElementById("sem").value;
+            var table = document.getElementById("students_table").getElementsByTagName("tbody")[0];
+            var newRow = table.insertRow(rowCount);
+            var cell1 = newRow.insertCell(0);
+            var cell2 = newRow.insertCell(1);
+            var cell3 = newRow.insertCell(2);
+            var cell4 = newRow.insertCell(3);
+            var cell5 = newRow.insertCell(4);
+            var cell6 = newRow.insertCell(5);
+            var cell7 = newRow.insertCell(6);
 
-                var cel1 = NewRow.insertCell(0);
-                var cel2 = NewRow.insertCell(1);
-                var cel3 = NewRow.insertCell(2);
-                var cel4 = NewRow.insertCell(3);
-                var cel5 = NewRow.insertCell(4);
-                var cel6 = NewRow.insertCell(5);
-                var cel7 = NewRow.insertCell(6);
+            cell1.innerHTML = sl_no;
+            cell2.innerHTML = branch;
+            cell3.innerHTML = roll_no;
+            cell4.innerHTML = name;
+            cell5.innerHTML = email;
+            cell6.innerHTML = mob_no;
+            cell7.innerHTML = sem;
+            rowCount++;
 
-                cel1.innerHTML = list1[x];
-                cel2.innerHTML = list2[x];
-                cel3.innerHTML = list3[x];
-                cel4.innerHTML = list4[x];
-                cel5.innerHTML = list5[x];
-                cel6.innerHTML = list6[x];
-                cel7.innerHTML = list7[x];
+            // Clear input fields after adding row
+           document.getElementById("sl_no").value = "";
+           document.getElementById("branch").value = "";
+           document.getElementById("roll_no").value="";
+           document.getElementById("name").value="";
+           document.getElementById("email").value="";
+           document.getElementById("mob_no").value="";
+           document.getElementById("sem").value="";
 
-                n++;
-                x++;
-            }
-        </script>
+        }
+        $("#myform").submit(function(event) {
+            event.preventDefault(); // Prevent form submission
 
+            // Serialize form data
+            var formData = $(this).serialize();
+
+       $.ajax({
+                url: "http://127.0.0.1:5000/add_students", // Replace with your server-side processing script URL
+                type: "POST",
+                data: formData,
+                success: function(response) {
+                    // Handle the server response, if needed
+                },
+                error: function() {
+                    // Handle the error, if any
+                }
+            });
+       });
+
+</script>
 
         <a href="/add_attendance">click here to go to attendance page</a><br>
-        <a href="/add_marks">click here to go to marks page</a><br>
+        <a href="/marks">click here to go to marks page</a><br>
         <a href="/display_records">click here to view all records and print</a>
 
         <form style="text-align:left;">
